--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,10 @@
-// TODO
+.container {
+  height: 6rem;
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 2rem 0;
+
+  img {
+    height: 25px;
+  }
+}
