--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,55 @@
-// TODO
+.posts {
+  max-width: 700;
+
+  a {
+    display: block;
+
+    & + a {
+      margin-top: 2rem;
+      padding-top: 2rem;
+    }
+
+    strong {
+      display: block;
+      font-size: 1.75rem;
+      line-height: 2.063rem;
+      font-weight: 700;
+      color: var(--heading);
+    }
+
+    p {
+      color: var(--body);
+      font-size: 1.125rem;
+      line-height: 1.5rem;
+      margin: 0.5rem 0 1.5rem;
+    }
+
+    div {
+      max-width: 310px;
+
+      display: flex;
+      justify-content: space-between;
+
+      font-size: 0.875rem;
+      color: var(--info);
+
+      time,
+      span {
+        display: flex;
+        align-items: center;
+
+        svg {
+          height: 20px;
+          width: 20px;
+          margin-right: 8px;
+        }
+      }
+    }
+  }
+}
+
+.morePosts {
+  display: flex;
+  margin-top: 4rem;
+  color: var(--highlight);
+}
