--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -8,7 +8,7 @@
 }
 
 .post {
-  padding: 2rem 2rem;
+  padding: 5rem 0;
 
   h1 {
     font-weight: 700;
@@ -74,8 +74,6 @@
     }
 
     a {
-      color: var(--highlight);
-
       transition: filter 0.3s ease;
 
       &:hover {
@@ -83,4 +81,36 @@
       }
     }
   }
+}
+
+.footer {
+  border-top: 1px solid rgba(215, 215, 215, 0.1);
+}
+
+.navigation {
+  display: grid;
+  grid-template-columns: repeat(2, 0.5fr);
+
+  padding: 5rem 0;
+
+  a {
+    display: grid;
+
+    font-size: 16px;
+    line-height: 19.36px;
+    font-weight: 600;
+
+    & > span {
+      display: block;
+
+      color: var(--heading);
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 21.78px;
+    }
+  }
+}
+
+.next {
+  text-align: right;
 }
